--- a/KeepingRunning/res/layout/fragment_run_type_one.xml
+++ b/KeepingRunning/res/layout/fragment_run_type_one.xml
@@ -6,17 +6,25 @@
     android:padding="10dp" >
     
     <TextView 
-        android:id="@+id/textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="@string/app_name"/>
+        android:textSize="28sp"
+        android:layout_weight="0.5"
+        android:text="@string/run_type_one"/>
+    
+    <ImageView 
+        android:layout_width="wrap_content"
+        android:layout_height="300dp"
+        android:layout_weight="3.5"
+        android:src="@drawable/run_type_one"/>
     
     <Button 
-        android:id="@+id/tomap"
-        android:layout_width="wrap_content"
+        android:id="@+id/start_run"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
+        android:layout_weight="0.5"
         android:layout_gravity="center_horizontal"
-        android:text="    Map   "/>
+        android:text="@string/start_run"/>
 
 </LinearLayout>
