--- a/KeepingRunning/res/layout/activity_running.xml
+++ b/KeepingRunning/res/layout/activity_running.xml
@@ -2,18 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="35dp"
+    android:padding="45dp"
     tools:context=".RunningActivity" >
 
-    <TextView 
-	    android:id="@+id/run_distance"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_marginTop="30dp"
-	    android:textSize="24sp"
-	    android:layout_centerHorizontal="true"
-	    android:text="Distance: 0.0 km"/>
-    
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,30 +23,32 @@
                 android:id="@+id/used_time"
             	android:layout_width="wrap_content"
             	android:layout_height="wrap_content"
-            	android:layout_marginRight="15dp"
+            	android:layout_marginRight="30dp"
             	android:textSize="18sp"
-            	android:text="Time: 00'' 00'"/>
+            	android:text="Time:"/>
             
             <TextView 
                 android:id="@+id/run_speed"
             	android:layout_width="wrap_content"
             	android:layout_height="wrap_content"
             	android:textSize="18sp"
-            	android:text="Speed: 0m/s"/>
+            	android:text="Speed:"/>
             
         </LinearLayout>
         
         <TextView 
+            android:id="@+id/run_distance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:textSize="24sp"
-            android:text="@string/preset_task"/>
+            android:textSize="28sp"
+            android:text="Distance:"/>
         
         <ProgressBar 
             android:id="@+id/limit_bar"
             android:layout_width="match_parent"
             android:layout_height="20dp"
+            android:progress="50" 
             style="?android:attr/progressBarStyleHorizontal"/>
         
         <Button
@@ -66,14 +59,4 @@
             android:background="@drawable/stop"/>
         
     </LinearLayout>
-    
-    <TextView 
-        android:id="@+id/task_notification"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#FF0000"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:textSize="24sp"/>
-    
 </RelativeLayout>
