--- a/KeepingRunning/res/layout/activity_running.xml
+++ b/KeepingRunning/res/layout/activity_running.xml
@@ -15,12 +15,14 @@
 	    android:text="Distance: 0.0 km"/>
     
     <LinearLayout 
+        android:id="@+id/dash_board"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
         android:background="@drawable/frame"
         android:padding="10dp"
+        android:visibility="invisible"
         android:orientation="vertical">
         
         <LinearLayout 
@@ -74,6 +76,7 @@
         android:textColor="#FF0000"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:textSize="24sp"/>
+        android:textSize="24sp"
+        android:text="@string/locating"/>
     
 </RelativeLayout>
